# replicate-bollinger-forest

./: .gitignore  README.md  pyproject.toml
src/bollinger_forest/: cli.py  data.py  indicators.py
src/bollinger_forest/models/: classical.py  enhanced.py
